--- a/inedx.html
+++ b/inedx.html
@@ -11,17 +11,16 @@
     <h1>Comparação Antes e Depois</h1>
     <div class="comparison-container">
         <label>
-            <input type="radio" name="audioToggle" value="original" checked>
-            Original
+            <input type="radio" name="audioToggle" value="beatv30" checked>
+            Beatv30 Mini ep
         </label>
         <label>
-            <input type="radio" name="audioToggle" value="mixada">
-            Mixada/Masterizada
+            <input type="radio" name="audioToggle" value="captainhook">
+            Captain Hook - Time & Space
         </label>
     </div>
     <div id="waveform"></div>
     <button id="playPause">Play/Pause</button>
-    
 
     <script src="script.js"></script>
 </body>
